[tool.poetry]
name = "medium_stats"
version = "2.1.2"
description = "CLI tool to fetch your Medium stats"
authors = ["otosky <olivertosky@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
lxml = "^4.6.3"
selenium = "^3.141.0"
webdriver-manager = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
